<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".qaza">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/orange"
            android:layout_alignParentBottom="true"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollghaza">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/kadu"
                    android:layout_margin="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/qaza_title1"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/shape_border_green"
                    android:textColor="@color/colorText"
                    android:id="@+id/ghaza1"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qaza_matn1"
                    android:textSize="16dp"
                    android:padding="10dp"
                    android:lineSpacingExtra="10dp"
                    android:textColor="@color/colorText"
                    android:id="@+id/matn"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/nazkhatun"
                    android:layout_margin="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/qaza_title2"
                    android:id="@+id/ghaza2"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/shape_border_green"
                    android:textColor="@color/colorText"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qaza_matn2"
                    android:textSize="16dp"
                    android:padding="10dp"
                    android:lineSpacingExtra="10dp"
                    android:textColor="@color/colorText"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/siranar"
                    android:layout_margin="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/qaza_title3"
                    android:id="@+id/ghaza3"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/shape_border_green"
                    android:textColor="@color/colorText"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qaza_matn3"
                    android:textSize="16dp"
                    android:padding="10dp"
                    android:lineSpacingExtra="10dp"
                    android:textColor="@color/colorText"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/ash"
                    android:layout_margin="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/qaza_title4"
                    android:id="@+id/ghaza4"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/shape_border_green"
                    android:textColor="@color/colorText"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qaza_matn4"
                    android:textSize="16dp"
                    android:padding="10dp"
                    android:lineSpacingExtra="10dp"
                    android:textColor="@color/colorText"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/bademjan"
                    android:layout_margin="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/qaza_title5"
                    android:id="@+id/ghaza5"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/shape_border_green"
                    android:textColor="@color/colorText"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qaza_matn5"
                    android:textSize="16dp"
                    android:padding="10dp"
                    android:lineSpacingExtra="10dp"
                    android:textColor="@color/colorText"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/ashkadu"
                    android:layout_margin="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/qaza_title6"
                    android:id="@+id/ghaza6"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/shape_border_green"
                    android:textColor="@color/colorText"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qaza_matn6"
                    android:textSize="16dp"
                    android:padding="10dp"
                    android:lineSpacingExtra="10dp"
                    android:textColor="@color/colorText"/>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</FrameLayout>